Added localization for role change, implemented role select screen on first boot

--- a/fidit_me_jakupovic/lib/l10n/app_en.arb
+++ b/fidit_me_jakupovic/lib/l10n/app_en.arb
@@ -13,5 +13,6 @@
     "ulogaStudentDipl": "Graduate Student",
     "izaberiJezik": "Select language",
     "primijeni": "Apply",
-    "odustani": "Cancel"
+    "odustani": "Cancel",
+    "izaberiUlogu": "Select role"
 }
