--- a/fidit_me_jakupovic/lib/l10n/app_hr.arb
+++ b/fidit_me_jakupovic/lib/l10n/app_hr.arb
@@ -69,5 +69,10 @@
     "@odustani": {
         "context": "Gumb text",
         "description": "Gumb dijaloga za izbor, zatvaranje"
+    },
+    "izaberiUlogu": "Izaberi ulogu",
+    "@izaberiUlogu": {
+        "context": "Dijalog",
+        "description": "Naslov dijaloga za izbor uloge"
     }
 }
