fully implemented about page

--- a/fidit_me_jakupovic/lib/l10n/app_en.arb
+++ b/fidit_me_jakupovic/lib/l10n/app_en.arb
@@ -22,5 +22,6 @@
     "vrijednosti": "Values",
     "vrijednostiContent": "1. Promotion of scientific excellence and international visibility, but also appreciation of diversity within different areas of scientific and professional work. \n\n2. Monitoring trends and new scientific knowledge to enable personal growth and development and competitiveness in the scientific and professional field. \n\n3. Strengthening cooperation and connection of all human resources at the Faculty, including students, teachers, researchers, non-teaching staff and external collaborators, as a mechanism of stability, joint development, quality and progress. \n\n4. Encouraging the development of the Faculty through cooperation with scientists in the country and abroad on scientific and professional projects. \n\n5. Encouraging the development of the Faculty through interdisciplinarity and cooperation on scientific projects and teaching programs with scientists from other compatible fields of science. \n\n6. Promotion of lifelong education and development of specialist studies. \n\n7. Promotion of the STEM field and transfer of knowledge to the local community and cooperation with the economy.",
     "osnovneInfo": "Basic information & contact",
-    "adresa": "Radmile Matejčić 2, 51000 Rijeka, Republic of Croatia"
+    "adresa": "Radmile Matejčić 2, 51000 Rijeka, Republic of Croatia",
+    "navigacijskiGumb": "Directions to this place"
 }
