--- a/fidit_me_jakupovic/lib/l10n/app_hr.arb
+++ b/fidit_me_jakupovic/lib/l10n/app_hr.arb
@@ -117,5 +117,36 @@
     "navigacijskiGumb": "Navigiraj me ovdje",
     "@navigacijskiGumb": {
         "description": "Content shown on navigate me here button"
+    },
+    "semestar": "{broj}. Semestar",
+    "@semestar": {
+        "description": "Placeholder poruka za broj semestra",
+        "placeholders": {
+            "broj": {
+                "example": "1"
+            }
+        }
+    },
+    "izvedbeniPlanOpis": "Ovdje su dostupni izvedbeni planovi za odgovarajuće predmete studija.",
+    "@izvedbeniPlanOpis": {
+        "description": "Introductory text which defines the role of the page"
+    },
+    "dokumenti": "{predmet, select, Matematika1{Matematika 1}  OsnoveProgramiranja{Osnove programiranja} OperacijskiSustavi{Operacijski sustavi} DubinskaAnalizaPodataka{Dubinska analiza podataka} StrojnoiDubokoUcenje{Strojno i duboko učenje} other{nedostupno}}",
+    "@dokumenti": {
+        "description": "this maps the name of the document in Document class (package internet_documents.dart) to the file name appropriate to the localization",
+        "placeholders": {
+            "predmet": {
+                "type": "String"
+            }
+        }
+    },
+    "porukaDijeljenjaDokumenta": "Dijeljenje dokumenta {nazivDokumenta}",
+    "@porukaDijeljenjaDokumenta": {
+        "description": "Subject message when sharing document",
+        "placeholders": {
+            "nazivDokumenta": {
+                "type": "String"
+            }
+        }
     }
 }
